# sky25a-levenshtein

./: .gitignore  CMakeLists.txt  Makefile  README.md  info.yaml
client/: CMakeLists.txt  client.cpp  client.h  icestick_spi.cpp  icestick_spi.h  icestick_spi_bus.cpp  icestick_spi_bus.h  levenshtein.cpp  levenshtein.h  main.cpp  real_uart.cpp  real_uart.h  runner.cpp  runner.h  spi.h  spi_bus.cpp  top.v  uart.h  uart_bus.cpp  uart_bus.h  unicode.cpp  verilator_context.cpp  verilator_context.h  verilator_spi.cpp  verilator_spi.h  verilator_spi_bus.cpp  verilator_spi_bus.h  verilator_uart.cpp  verilator_uart.h
docs/: design.dot  info.md  statemachine.dot
fpga/: CMakeLists.txt  icestick.pcf  top.sv
icestick/: CMakeLists.txt
pico-ice/: CMakeLists.txt  top.sv
scripts/: analyze_json.py  analyze_mag.py
sim/: accelerator.h  levenshtein.cpp  levenshtein.h  main.cpp  simulator.h  test_set.cpp  test_set.h  top.v  uart.h  wishbone.h
sim/nonstd/: ensure_started.h  lazy.h  make_awaitable.h  move_only_function.h  start_detached.h  then.h  upon_error.h
src/: config.json  engine_controller.sv  levenshtein_controller.sv  project.v  spi_controller.sv  spi_wishbone_bridge.sv  tt_um_levenshtein.v  tt_um_pchri03_levenshtein.v  uart2wb.sv  uart_wishbone_bridge.sv  wb2spi.sv  wb2sram.sv  wb_interconnect.sv
test/: Makefile  qspi_sram.sv  tb.gtkw  tb.v  test.py
tools/: uart_wb.cpp
